# advection-and-coagulation

./: .gitignore  Makefile  README.md  main.cpp
1D_advection/: CMakeLists.txt  main.cpp
1D_advection/advection/: CMakeLists.txt  backward_difference.cpp  central_difference.cpp  forward_difference.cpp  forward_difference.h  util.cpp  util.h
1D_advection/visualization/: visualization.ipynb
cpp/: CMakeLists.txt  downloadFindFFTW.cmake.in  main.cpp
go/: Makefile  config.json  go.mod  go.sum
go/algorithm/advector1d/: advector.go  central_difference.go
go/algorithm/coagulation/: coagulator.go  kernel.go  process.go
go/algorithm/coagulation/fast/: coagulator.go  process.go
go/algorithm/coagulation/kernel/: addition.go  identity.go  multiplication.go
go/algorithm/coagulation/predcorr/: coagulator.go  process.go
go/algorithm/coagulator/: coagulator.go  kernel.go  process.go
go/algorithm/coagulator/kernel/: identity.go
go/algorithm/coagulator1d/: coagulator.go  kernel.go  parallel_coagulator.go  sequential_coagulator.go
go/algorithm/coagulator1d/kernel1d/: identity.go
go/algorithm/coagulator1d/naiveparallel/: coagulator.go  process.go
go/algorithm/coagulator1d/parallelpool/: coagulator.go  process.go
go/algorithm/coagulator1d/sequential/: coagulator.go  process.go
go/algorithm/decompose/: decompose.go  decompose_test.go
go/algorithm/toeplitz/: multiplication.go  multiplication_test.go
go/cmd/coagulation1d/: main.go
go/config/: config.go
go/internal/cell/: cell.go
go/internal/coagulator1d/naiveparallel/: coagulator.go
go/internal/coagulator1d/parallelpool/: coagulator.go
go/internal/coagulator1d/sequential/: coagulator.go
go/internal/field1d/: field.go  init.go  saver.go
go/internal/field1d/saver/: mock.go  saver.go  saver_impl.go
vizualization/: visualization.ipynb  visualization_1D.ipynb
